org.objectstyle.wolips.eomodeler.core